Fix responsiveness with coming-soon image on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ main {
 }
 
 #lalalchemist {
-  width: 300px;
+  width: 100%;
   height: auto;
 }
 
